Performed a scalacticTestJS/test:compile first before running tests in scalacticTestsJS1.